feat(extension): enhance extension with background service worker and dynamic query search update
- Add `service_worker` in manifest for background tasks
- Implement message passing from background script on tab update to refresh query search in react hook dynamically

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -9,5 +9,8 @@
       "js": ["src/content.tsx"]
     }
   ],
-  "permissions": ["activeTab", "storage"]
+  "background": {
+    "service_worker": "src/background.ts"
+  },
+  "permissions": ["activeTab", "storage", "tabs"]
 }
