--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,6 +3,9 @@
   "name": "Omni Turtle Search",
   "description": "Search the web with the power of the turtle!",
   "version": "1.0",
+  "options_ui": {
+    "page": "options.html"
+  },
   "content_scripts": [
     {
       "matches": ["https://kagi.com/search?q=*"],
