feat(http, services): implement streaming search API and refactor search logic
- Add streaming search handler to support real-time search results.
- Refactor search logic to encapsulate provider search execution, improving code maintainability and readability.
- Introduce `SearchStream` method for concurrent streaming of search results from multiple providers.

--- a/extension/package.json
+++ b/extension/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "extended-eventsource": "^1.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
