--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,6 +3,11 @@
   "name": "Omni Turtle Search",
   "description": "Search the web with the power of the turtle!",
   "version": "1.0",
+  "icons": {
+    "16": "icon.png",
+    "48": "icon.png",
+    "128": "icon.png"
+  },
   "options_ui": {
     "page": "options.html"
   },
