--- a/extension/package.json
+++ b/extension/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-virtual": "^3.8.2",
     "clsx": "^2.1.1",
     "extended-eventsource": "^1.4.9",
     "react": "^18.2.0",
