feat: update Docker build process and app configuration for static files
- Update Dockerfile to support multi-stage builds for Go and Node.js environments, optimizing the build process and reducing the final image size.
- Introduce environment variable `BASE_STATIC_PATH` to dynamically set the path for serving static files, enhancing flexibility and configuration options.
- Modify `.dockerignore` files to exclude unnecessary files and directories from the Docker context, improving build performance and security.
- Adjust Go application configuration and HTTP client to utilize `BASE_STATIC_PATH` for serving static files, aligning with Docker and environment configurations.

--- a/compose.yaml
+++ b/compose.yaml
@@ -10,6 +10,7 @@ services:
       CUBOX_TOKEN: ${CUBOX_TOKEN}
       TODOIST_TOKEN: ${TODOIST_TOKEN}
       NOTION_TOKEN: ${NOTION_TOKEN}
+      BASE_STATIC_PATH: /static
       HTTP_PORT: 8080
     networks:
       - proxy
