--- a/.github/workflows/release-extension.yml
+++ b/.github/workflows/release-extension.yml
@@ -23,14 +23,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
 
       - name: Install dependencies
-        working-directory: ./extensions
+        working-directory: extension
         run: pnpm install
 
       - name: Build
-        working-directory: ./extensions
+        working-directory: extension
         run: |-
           pnpm build:extension
           zip -r omni-turtle-search-extension-${{ github.sha }}.zip dist-extension
@@ -39,4 +38,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: omni-turtle-search-extension-${{ github.sha }}
-          path: ./extensions/omni-turtle-search-extension-${{ github.sha }}.zip
+          path: extension/omni-turtle-search-extension-${{ github.sha }}.zip
