--- a/.dockerignore
+++ b/.dockerignore
@@ -4,21 +4,21 @@
 # For more help, visit the .dockerignore file reference guide at
 # https://docs.docker.com/go/build-context-dockerignore/
 
-**/.DS_Store
 **/.classpath
-**/.dockerignore
+.dockerignore
 **/.env
 **/.git
-**/.gitignore
+.gitignore
 **/.project
 **/.settings
 **/.toolstarget
 **/.vs
 **/.vscode
+**/.next
+**/.cache
 **/*.*proj.user
 **/*.dbmdl
 **/*.jfm
-**/bin
 **/charts
 **/docker-compose*
 **/compose.y*ml
@@ -28,5 +28,7 @@
 **/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
+**/build
+**/dist
 LICENSE
 README.md
