--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "BUILD_TARGET=extension vite",
     "build:web": "BUILD_TARGET=web pnpm build",
     "build:extension": "BUILD_TARGET=extension pnpm build",
     "build": "tsc && vite build",
@@ -13,19 +13,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-virtual": "^3.8.2",
+    "@tanstack/react-virtual": "^3.13.2",
     "clsx": "^2.1.1",
-    "extended-eventsource": "^1.4.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "extended-eventsource": "^2.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.268",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types/chrome": "^0.0.307",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@types/webextension-polyfill": "^0.12.3",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^8",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-filename-rules": "^1.3.1",
@@ -39,10 +40,11 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "eslint-plugin-simple-import-sort": "^12.1.0",
-    "prettier": "^3.3.2",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "vite-plugin-svgr": "^4.2.0",
-    "vite-plugin-web-extension": "^4.1.4"
+    "prettier": "^3.5.2",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.0",
+    "vite-plugin-svgr": "^4.3.0",
+    "vite-plugin-web-extension": "^4.4.3",
+    "webextension-polyfill": "^0.12.0"
   }
 }
