--- a/.github/workflows/release-extension.yml
+++ b/.github/workflows/release-extension.yml
@@ -33,7 +33,7 @@ jobs:
         run: pnpm build:extension
 
       - name: Package Extension
-        run: zip -r ../omni-turtle-search-extension-${{ github.ref_name }}.zip dist-extension
+        run: zip -r omni-turtle-search-extension-${{ github.ref_name }}.zip dist-extension
 
       - name: Create Release and Upload Asset
         uses: softprops/action-gh-release@v1
