--- a/compose.yaml
+++ b/compose.yaml
@@ -3,15 +3,12 @@ services:
     restart: unless-stopped
     build:
       context: .
-      target: final
     expose:
-      - 8080
+      - 80
     environment:
-      CUBOX_TOKEN: ${CUBOX_TOKEN}
-      TODOIST_TOKEN: ${TODOIST_TOKEN}
-      NOTION_TOKEN: ${NOTION_TOKEN}
-      BASE_STATIC_PATH: /static
-      HTTP_PORT: 8080
+      - SERVER_ROOT=/var/public
+      - SERVER_FALLBACK_PAGE=/var/public/index.html
+      - SERVER_ERROR_PAGE_404=/var/public/index.html
     networks:
       - proxy
     labels:
